--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RimauStudio</title>
+  <title>lco. - Home</title>
 
   <!--
     - favicon
@@ -46,9 +46,9 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Rimau Studio">Rimau Studio</h1>
+          <h1 class="name" title="lco.">lco.</h1>
 
-          <p class="title">Build Boldly, Lead Bravely</p>
+          <p class="title">Since 2025</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
