--- a/index.html
+++ b/index.html
@@ -42,8 +42,16 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/logo_white_lco.png" alt="lco" width="80">
-        </figure>
+  <img src="./assets/images/logo_white_lco.png" alt="lco" width="80">
+</figure>
+
+<style>
+  .avatar-box {
+    background: none;
+    border: none;
+    box-shadow: none;
+  }
+</style>
 
         <div class="info-content">
           <h1 class="name" title="lco.">lco.</h1>
