--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </style>
 
         <div class="info-content">
-          <h1 class="name" title="lco.">lco.</h1>
+          <h1 class="name" title="lco. corporation">lco.</h1>
 
           <p class="title">Since 2025</p>
         </div>
@@ -212,7 +212,7 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h2 class="h2 article-title">About Us</h2>
         </header>
 
         <section class="about-text">
