--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width="100", initial-scale=1.0">
   <title>lco. - Home</title>
 
   <!--
@@ -217,17 +217,15 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            lco. is a cutting-edge company focused on driving technological innovation in software development. 
+            With a strong vision for creating immersive and enjoyable experiences, 
+            lco. serves as the parent company of 4 groundbreaking subsidiaries: Rimau Studios, lco.aviation, Trinity Studios, and lco.defence.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Together, they are committed to developing captivating titles across all platforms, pushing creative boundaries, 
+            and delivering exceptional entertainment to audiences worldwide, making a lasting impact on the future of gaming, 
+            interactive media, and defense technologies.
           </p>
         </section>
 
@@ -238,22 +236,22 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">Our Subsidiaries</h3>
 
           <ul class="service-list">
 
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/rimau_studio.png
+                " alt="design icon" width="100">
               </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
-
+              
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, dedicated to providing enjoyable and immersive entertainment experiences to players. As a cornerstone of
+this vibrant community, Rimau Studios takes pride in delivering high-quality content that
+resonates with players of all backgrounds. By fostering innovation and creativity, Rimau Studios
+aims to set new standards for gaming and collaboration within ROBLOX.
                 </p>
               </div>
 
