--- a/index.html
+++ b/index.html
@@ -243,9 +243,11 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/rimau_studio.png
-                " alt="design icon" width="40">
+                <img src="./assets/images/rimau_studio.png" alt="design icon" width="40">
               </div>
+
+               <div class="service-content-box">
+                <h4 class="h4 service-item-title">Web development</h4>
               
                 <p class="service-item-text">
                   Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, dedicated to providing enjoyable and immersive entertainment experiences to players. As a cornerstone of
