--- a/index.html
+++ b/index.html
@@ -242,9 +242,15 @@
 
             <li class="service-item">
 
-              <div class="service-box">
-  <img src="./assets/images/rimau_studio.png" alt="Web Development Logo" width="40">
+             <div class="service-box">
+  <div class="service-icon-box">
+    <img src="./assets/images/rimau_studio.png" alt="Rimau Studio Icon" width="40">
+  </div>
+  <div class="service-content-box">
+    <h4 class="h4 service-item-title visually-hidden">Rimau Studio</h4>
+  </div>
 </div>
+
               
                 <p class="service-item-text">
                   Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, dedicated to providing enjoyable and immersive entertainment experiences to players. As a cornerstone of
