--- a/index.html
+++ b/index.html
@@ -242,15 +242,12 @@
 
             <li class="service-item">
 
-             <div class="service-box">
-  <div class="service-icon-box">
-    <img src="./assets/images/rimau_studio.png" alt="Rimau Studio Icon" width="40">
-  </div>
-  <div class="service-content-box">
-    <h4 class="h4 service-item-title visually-hidden">Rimau Studio</h4>
-  </div>
-</div>
-
+            <<div class="service-icon-box">
+              <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+            </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">&nbsp;</h4>
+              </div>
               
                 <p class="service-item-text">
                   Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, dedicated to providing enjoyable and immersive entertainment experiences to players. As a cornerstone of
