--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width="40", initial-scale=1.0">
+  <meta name="viewport" content="width="100", initial-scale=1.0">
   <title>lco. - Home</title>
 
   <!--
@@ -246,7 +246,7 @@
               <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
             </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">&nbsp;</h4>
+                <h4 class="h4 service-item-title"></h4>
               </div>
               
                 <p class="service-item-text">
