--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
             </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title"></h4>
+                <h4 class="h4 service-item-title">Rimau Studio</h4>
               </div>
               
                 <p class="service-item-text">
