--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
           <p>
             lco. is a cutting-edge company focused on driving technological innovation in software development. 
             With a strong vision for creating immersive and enjoyable experiences, 
-            lco. serves as the parent company of 4 groundbreaking subsidiaries: Rimau Studios, lco.aviation, Trinity Studios, and lco.defence.
+            lco. serves as the parent company of 4 groundbreaking subsidiaries: 
+            Rimau Studios, lco.aviation, Trinity Studios, and lco.defence.
           </p>
 
           <p>
