--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
 
             <li class="service-item">
 
-            <<div class="service-icon-box">
-              <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
-            </div>
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Rimau Studio</h4>
+            <div class="service-icon-box">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Web development</h4>
               
                 <p class="service-item-text">
                   Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, dedicated to providing enjoyable and immersive entertainment experiences to players. As a cornerstone of
