--- a/index.html
+++ b/index.html
@@ -251,10 +251,8 @@
                 <h4 class="h4 service-item-title">Web development</h4>
               
                 <p class="service-item-text">
-                  Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, dedicated to providing enjoyable and immersive entertainment experiences to players. As a cornerstone of
-this vibrant community, Rimau Studios takes pride in delivering high-quality content that
-resonates with players of all backgrounds. By fostering innovation and creativity, Rimau Studios
-aims to set new standards for gaming and collaboration within ROBLOX.
+                  Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, 
+                  dedicated to providing enjoyable and immersive entertainment experiences to players.
                 </p>
               </div>
 
