--- a/index.html
+++ b/index.html
@@ -242,13 +242,12 @@
           <ul class="service-list">
 
             <li class="service-item">
-
-            <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
-              </div>
               
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Rimau Studio</h4>
+                <div class="service-icon-box">
+                <img src="./assets/images/rimau_studio.png" alt="rimau studio icon" width="40">
+              </div>
               
                 <p class="service-item-text">
                   Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, 
