--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
             <li class="service-item">
               
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Rimau Studio</h4>
+                <h4 class="h4 service-item-title"/h4>
                 <div class="service-icon-box">
-                <img src="./assets/images/rimau_studio.png" alt="rimau studio icon" width="40">
+                <img src="./assets/images/rimau_studio.png" alt="rimau studio icon" width="100">
               </div>
               
                 <p class="service-item-text">
