--- a/index.html
+++ b/index.html
@@ -244,9 +244,10 @@
             <li class="service-item">
               
               <div class="service-content-box">
-    <div class="service-icon-box">
-        <img src="./assets/images/rimau_studio.png" alt="rimau studio icon" width="350" class="service-item-title">
-    </div>
+    <h4 class="h4 service-item-title">
+        <img src="./assets/images/rimau_studio.png" alt="Rimau Studio Icon" width="350">
+    </h4>
+    <div class="service-icon-box"></div>
 </div>
                   
               </div>
