--- a/index.html
+++ b/index.html
@@ -244,8 +244,10 @@
             <li class="service-item">
               
               <div class="service-content-box">
-                <h4 class="service-icon-box"/h4>
+                <h4 class="h4 service-item-title"
+                <div class="service-icon-box">
                 <img src="./assets/images/rimau_studio.png" alt="rimau studio icon" width="350">
+                  </h4>
               </div>
               
                 <p class="service-item-text">
