--- a/index.html
+++ b/index.html
@@ -244,11 +244,10 @@
             <li class="service-item">
               
               <div class="service-content-box">
-                <h4 class="h4 service-item-title"
+                <h4 class="h4 service-item-title"/h4>
                 <div class="service-icon-box">
                 <img src="./assets/images/rimau_studio.png" alt="rimau studio icon" width="350">
-                  </h4>
-              </div>
+                </div>
               
                 <p class="service-item-text">
                   Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, 
