--- a/index.html
+++ b/index.html
@@ -244,10 +244,8 @@
             <li class="service-item">
               
               <div class="service-content-box">
-                <h4 class="h4 service-item-title"/h4>
-                <div class="service-icon-box">
-                <img src="./assets/images/rimau_studio.png" alt="rimau studio icon" width="350">
-                </div>
+    <img src="./assets/images/rimau_studio.png" alt="Rimau Studio Icon" class="h4 service-item-title" width="350">
+</div>
               
                 <p class="service-item-text">
                   Rimau Studios is an integral part of the MY | Malaysia of ROBLOX Community, 
