--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </style>
 
         <div class="info-content">
-          <h1 class="name" title="lco. corporation">lco.</h1>
+          <h1 class="name" title="lco. corporation">lco. corporation</h1>
 
           <p class="title">Since 2025</p>
         </div>
