--- a/index.html
+++ b/index.html
@@ -514,10 +514,10 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="Roadmap" data-page="Roadmap">
 
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h2 class="h2 article-title">Roadmap</h2>
         </header>
 
         <section class="timeline">
@@ -707,10 +707,10 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="Projects" data-page="Projects">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
